fix: main content was too tall

--- a/static/main.css
+++ b/static/main.css
@@ -10,7 +10,7 @@ body {
 
 main {
     flex: 1 1 auto;
-    height: 100%;
+    height: 99%;
 }
 
 footer {
